changed font sizes and updated backgrond video to avoid overlap

--- a/src/background_video/BackgroundVideo.module.css
+++ b/src/background_video/BackgroundVideo.module.css
@@ -4,8 +4,10 @@
     left: 0;
     z-index: -1;
     object-fit: cover;
+    background-color: var(--lal-blue);
     width: 100vw;
     max-width: 100%;
+    height: 100%;
 }
 
 .videoWrapper {
